syntax = "proto3";

option go_package = "bi/internal/conf;conf";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "rabbitmq.proto";

message Bootstrap {
  Server server = 1;
  Store store = 2;
  Alias alias = 3;
  Search search = 4;
  Cache cache = 5;
  Recaptcha recaptcha = 6;
  JWT jwt = 7;
  bingo.pkg.rabbitmq.PublisherConfig publisher = 8;
  BI bi = 9;
  BE be = 10;
  GoWitness go_witness = 11;
  Jaeger jaeger = 12;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  bool debug = 3;
  int64 page_size = 4;
}

message Store {
  string driver = 1;
  string host = 2;
  uint32 port = 3;
  string database = 4;
  string username = 5;
  string password = 6;
}

message Alias {
  google.protobuf.Timestamp start_time = 1;
  uint32 bit_len_time = 2;
  uint32 bit_len_sequence = 3;
  uint32 bit_len_machine_id = 4;
  repeated string etcd_addrs = 5;
  string etcd_username = 6;
  string etcd_password = 7;
}

message Search {
  repeated string addrs = 1;
  string index_name = 2;
  bool sniff = 3;
  uint32 number_of_shards = 4;
  uint32 number_of_replicas = 5;
  string username = 6;
  string password = 7;
}

message Cache {
  string addr = 1;
  uint32 cache_ttl = 2;
  string username = 3;
  string password = 4;
  bool sentinel_enabled = 5;
  string sentinel_master_set = 6;
  repeated string sentinel_addrs = 7;
  string sentinel_username = 8;
  string sentinel_password = 9;
}

message Recaptcha {
  string site_key = 1;
  string secret_key = 2;
}

message JWT {
  string issuer = 1;
  string audience = 2;
  string fallback_signature_algorithm = 3;
  map<string, string> required_claims = 4;
}

message BI {  
  string grpc_addr = 1;
  string http_addr = 2;
  enum Protocol {
    GRPC = 0;
    HTTP = 1;
  }
  Protocol protocol = 3;
}

message BE {  
  string http_addr = 1;
}

message GoWitness {  
  string addr = 1;
}

message Jaeger {
  string addr = 1;
}